syntax = "proto3";

import "basic-meta.proto";
package com.welab.wefe.gateway.api.meta.basic;
option java_outer_classname = "GatewayMetaProto";


message Member {
    string memberId = 1; // Member ID
    string memberName = 2; // Member name
    com.welab.wefe.gateway.api.meta.basic.Endpoint endpoint = 3; // Destination address
}

enum TransferStatus {
    NOT_PROCESSED = 0;
    INITIALIZING = 1;
    PROCESSING = 2;
    COMPLETE = 3;
    ERROR = 4;
    CANCELLED = 5;
}

// Transmission content
message Content {
    string strData = 1; // Small data type carrier
    bytes byteData = 3; // Binary data carrier of small data type
    repeated com.welab.wefe.gateway.api.meta.basic.KeyValueData keyValueDatas = 2; // Big data type carrier
}


// Metadata message structure sent and received by gateway
message TransferMeta {
    Member src = 1; // Sender
    Member dst = 2; // Receiver
    Content content = 3; // Content body
    string processor = 4; // The processor field of the new version is used to replace the action field of the old version
    TransferStatus transferStatus = 5; // Transmission status
    string sessionId = 6; // transaction ID
    int64 receiveDate = 7; // Time data received
    int64 expireDate = 8; // Data expiration time
    int32 sequenceNo = 9; // Slice serial number when sending big data
    bool sequenceIsEnd = 10; // Is it the serial number of the last slice
    bytes taggedVariableName = 11;
    string tag = 12;
    string extField = 13;
}